syntax = "proto3";

package indentRPC;


// 创建订单，存入 redis 设置过期时间，等待用户支付
message CreateRequest {
  int32 user_id = 1;
  int32 train_id = 2;
  int32 start_station_id = 3;
  string start_time = 4;
  int32 dest_station_id = 5;
  string arrive_time = 6;
  string date = 7;
  int32 expired_time = 8;
  int32 ticket_number = 9;
  int32 amount = 10;
}

message CreateResponse {
  string indent_outer_id = 1;
}

// 用户支付后调用该服务写入将 redis 中订单信息数据库
message PayRequest {
  int32 user_id = 1;
  string indent_outer_id = 2;
  int32 pay_amount = 3;
}

message PayResponse {
  bool is_ok = 1;
}


// 根据用户 id 查询是否有未完成的订单
message UnfinishedRequest {
  int32 user_id = 1;
}

message UnfinishedResponse {
  bool has_unfinished_indent = 1;
}

service IndentService {
  rpc CreateIndent (CreateRequest) returns (CreateResponse){}
  rpc PayIndent (PayRequest) returns (PayResponse){}
  rpc HasUnfinishedIndent (UnfinishedRequest) returns (UnfinishedResponse){}
}