syntax = "proto3";

package ticketPoolRPC;

message Ticket {
  uint32 id = 1;
  uint32 train_id = 2;         // 列车id
  uint32 start_station_id = 3;   // 起始站
  string start_time = 4;
  uint32 dest_station_id = 5;    // 目的站
  string arrive_time = 6;
  string date = 7;            // 乘车日期
  uint32 seat_type_id = 8;       // 座位类型（硬座、卧铺、一等、二等）
  string carriage_number = 9; // 车厢号
  string seat_number = 10;     // 座号
  uint32 passenger_id = 11;    // 乘车人id
  uint32 indent_id = 12;        // 订单号
  int32 amount =13;
}

// 出票
message GetTicketRequest {
  uint32 train_id = 1;
  uint32 start_station_id = 2;
  uint32 dest_station_id = 3;
  string date = 4;
  repeated PassengerInfo passengers = 5;
}

message PassengerInfo {
  uint32 passenger_id = 1;
  uint32 seat_type_id = 2;
  string choose_seat = 3;
}

message GetTicketResponse {
  repeated Ticket tickets = 1;
}


// 查余票
message GetTicketNumberRequest {
  repeated uint32 train_id = 1;
  uint32 start_station_id = 2;
  uint32 dest_station_id = 3;
  string date = 4;
}



message TrainTicketInfo {
  uint32 train_id = 1;
  repeated SeatInfo seat_info = 2;
}

message SeatInfo {
  uint32 seat_type_id = 1;
  int32 seat_number = 2;
}

message GetTicketNumberResponse{
  repeated TrainTicketInfo trainsTicketInfo = 1;
}

// 退票
message RefundTicketRequest {
  repeated Ticket tickets = 1 ;
}

message RefundTicketResponse {
  bool isOk = 1;
}

service TicketPoolService {
  rpc GetTicket (GetTicketRequest) returns (GetTicketResponse){}
  rpc GetTicketNumber (GetTicketNumberRequest) returns (GetTicketNumberResponse){}
  rpc RefundTicket (RefundTicketRequest) returns (RefundTicketResponse){}
}

